--- a/rmqdep.yaml
+++ b/rmqdep.yaml
@@ -23,8 +23,8 @@ spec:
           env:
             - name: RABBITMQ_DEFAULT_PASS
               valueFrom:
-               secretKeyRef:
-                - name: app-secret
+                secretKeyRef:
+                  name: app-secret
                   key: rmq-pass
             - name: RABBITMQ_DEFAULT_USER
               value: "guest"         
