--- a/mcdep.yaml
+++ b/mcdep.yaml
@@ -13,11 +13,12 @@ spec:
     metadata:
       labels:
         app: vpromc
-    containers:
-     - name: vpromc
-       image: memcached
-       ports:
-        - name: vpromc-port
-          containerPort: 11211
+    spec:    
+      containers:
+        - name: vpromc
+          image: memcached
+          ports:
+            - name: vpromc-port
+              containerPort: 11211
           
  
