--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -35,7 +35,8 @@ spec:
         zone: us-east-2a             
       volumes:
         - name: vpro-db-data
-          awsElasticBlockStore:
-            volumeID: vol-0f650808478b5d76d
+          csi:
+            driver: ebs.csi.aws.com
+            volumeHandle: vol-0f650808478b5d76d
             fsType: ext4
         
