--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     app: vprodb
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: vprodb
-  replicas: 1
   template:
     metadata:
       labels:
@@ -19,24 +19,23 @@ spec:
           image: piyush1337/vprofiledb:v1
           args:
             - "--ignore-db-dir=lost+found"
+          ports:
+            - name: vprodb-port
+              containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: app-secret
+                  key: db-pass
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: vpro-db-data
-          ports:
-           - name: vprodb-port
-             containerPort: 3306
-          env: 
-           - name: MYSQL_ROOT_PASSWORD
-             valueFrom:
-              secretKeyRef:
-                name: app-secret
-                key: db-pass
       nodeSelector:
-        zone: us-east-2a             
+        topology.kubernetes.io/zone: us-east-2a
       volumes:
         - name: vpro-db-data
           csi:
             driver: ebs.csi.aws.com
             volumeHandle: vol-0f650808478b5d76d
             fsType: ext4
-        
