--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -23,10 +23,10 @@ spec:
               containerPort: 8080
       initContainers:
         - name: init-mydb
-          image: busybox
+          image: debian:stable-slim
           command: ['sh','-c','until nslookup vprodb; do echo waiting for mydb; sleep 2; done;']
         - name: init-memcache
-          image: busybox
+          image: debian:stable-slim
           command: ['sh','-c','until nslookup vprocache01; do echo waiting for mydb; sleep 2; done;']  
 
 
