--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -12,7 +12,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   csi:
     driver: ebs.csi.aws.com
-    volumeHandle: vol-0f650808478b5d76d
+    volumeHandle: vol-097ebea241699fa2a
     fsType: ext4
 ---
 apiVersion: v1
@@ -25,6 +25,8 @@ spec:
   resources:
     requests:
       storage: 3Gi
+  volumeName: vprodb-pv              
+  storageClassName: ""    
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -43,7 +45,7 @@ spec:
         app: vprodb
     spec:
       nodeSelector:
-        topology.kubernetes.io/zone: us-east-2a
+        topology.kubernetes.io/zone: us-east-1a
       containers:
         - name: vprodb
           image: piyush1337/vprofiledb:v1
