--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -24,10 +24,10 @@ spec:
       initContainers:
         - name: init-mydb
           image: debian:stable-slim
-          command: ['sh','-c','until nslookup vprodb; do echo waiting for mydb; sleep 2; done;']
+          command: ['sh','-c','until getent hosts vprodb; do echo waiting for mydb; sleep 2; done;']
         - name: init-memcache
           image: debian:stable-slim
-          command: ['sh','-c','until nslookup vprocache01; do echo waiting for mydb; sleep 2; done;']  
+          command: ['sh','-c','until getent hosts vprocache01; do echo waiting for mydb; sleep 2; done;']  
 
 
                 
